--- a/gleam/sequences/gleam.toml
+++ b/gleam/sequences/gleam.toml
@@ -14,11 +14,11 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
-argv = ">= 1.0.2 and < 2.0.0"
 mist = ">= 2.0.0 and < 3.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
 gleam_http = ">= 3.6.0 and < 4.0.0"
 gleam_otp = ">= 0.11.1 and < 1.0.0"
+gleam_json = ">= 1.0.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
