--- a/gleam/sequences/gleam.toml
+++ b/gleam/sequences/gleam.toml
@@ -19,6 +19,7 @@ gleam_erlang = ">= 0.25.0 and < 1.0.0"
 gleam_http = ">= 3.6.0 and < 4.0.0"
 gleam_otp = ">= 0.11.1 and < 1.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
+sqlight = ">= 0.9.1 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
