--- a/gleam/sequences/gleam.toml
+++ b/gleam/sequences/gleam.toml
@@ -19,8 +19,11 @@ gleam_erlang = ">= 0.25.0 and < 1.0.0"
 gleam_http = ">= 3.6.0 and < 4.0.0"
 gleam_otp = ">= 0.11.1 and < 1.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
-sqlight = ">= 0.9.1 and < 1.0.0"
-youid = ">= 1.2.0 and < 2.0.0"
+gleam_httpc = ">= 3.0.0 and < 4.0.0"
+mungo = ">= 0.26.0 and < 1.0.0"
+bison = ">= 1.6.0 and < 2.0.0"
+dotenv_gleam = ">= 1.0.6 and < 2.0.0"
+logging = ">= 1.3.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
