--- a/gleam/sequences/gleam.toml
+++ b/gleam/sequences/gleam.toml
@@ -24,6 +24,7 @@ mungo = ">= 0.26.0 and < 1.0.0"
 bison = ">= 1.6.0 and < 2.0.0"
 dotenv_gleam = ">= 1.0.6 and < 2.0.0"
 logging = ">= 1.3.0 and < 2.0.0"
+timestamps = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
