--- a/gleam/sequences/gleam.toml
+++ b/gleam/sequences/gleam.toml
@@ -26,6 +26,7 @@ dotenv_gleam = ">= 1.0.6 and < 2.0.0"
 logging = ">= 1.3.0 and < 2.0.0"
 timestamps = ">= 1.0.0 and < 2.0.0"
 gwt = ">= 1.0.0 and < 2.0.0"
+sqlight = ">= 0.9.1 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
